[package]
name = "rotate"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Laperle"]
description = "Rotate backup files based on file name pattern or last modified date"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version="4.5", features=["derive"] }


[dev-dependencies]
cargo-llvm-cov = "0.6.9"
tempdir = "0.3"

